Add two new resources
This change adds instance_disk and instance_network_interface resources.

Change-Id: I592ad5c200770644248d3c36aa82111643569e20

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,8 @@ packages =
 gnocchi.indexer.resources =
     generic = gnocchi.indexer.sqlalchemy_base:Resource
     instance = gnocchi.indexer.sqlalchemy_extension:Instance
+    instance_disk = gnocchi.indexer.sqlalchemy_extension:InstanceDisk
+    instance_network_interface = gnocchi.indexer.sqlalchemy_extension:InstanceNetworkInterface
     swift_account = gnocchi.indexer.sqlalchemy_base:ResourceExt
     volume = gnocchi.indexer.sqlalchemy_extension:Volume
     ceph_account = gnocchi.indexer.sqlalchemy_base:ResourceExt
@@ -43,6 +45,8 @@ gnocchi.indexer.resources =
 gnocchi.controller.resources =
     generic = gnocchi.rest:GenericResourcesController
     instance = gnocchi.rest:InstancesResourcesController
+    instance_disk = gnocchi.rest:InstanceDisksResourcesController
+    instance_network_interface = gnocchi.rest:InstanceNetworkInterfacesResourcesController
     swift_account = gnocchi.rest:SwiftAccountsResourcesController
     volume = gnocchi.rest:VolumesResourcesController
     ceph_account = gnocchi.rest:CephAccountsResourcesController
