indexer: remove details on create_metric()
There should be no need to retrieve any details when creating metric,
as the cost associated is not worth it.

Change-Id: I4976b9f4fd3c2257bf9489b2403fa0a7e9727719

--- a/gnocchi/tests/gabbi/gabbits/metric.yaml
+++ b/gnocchi/tests/gabbi/gabbits/metric.yaml
@@ -47,7 +47,7 @@ tests:
           name: "disk.io.rate"
       status: 201
       response_json_paths:
-          $.archive_policy.name: cookies
+          $.archive_policy_name: cookies
           $.name: disk.io.rate
 
     - name: create metric with name no rule
@@ -90,7 +90,7 @@ tests:
           archive_policy_name: cookies
       status: 201
       response_json_paths:
-          $.archive_policy.name: cookies
+          $.archive_policy_name: cookies
 
     - name: get valid metric id
       url: /v1/metric/$RESPONSE['$.id']
