tox: use factor feature to simplify layout
Change-Id: I602f521ec69828cd056bef709740ccf07ef2bf73

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = py27-postgresql-file,py27,py34,pep8,bashate
+minversion = 1.8
+envlist = py{27,34},py{27,34}-{postgresql,mysql}-{file,swift,ceph,influxdb},pep8,bashate
 
 [testenv]
 usedevelop = True
@@ -7,7 +8,15 @@ sitepackages = False
 passenv = LANG
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands = {toxinidir}/tools/pretty_tox.sh '{posargs}'
+commands =
+    py{27,34}-postgresql-{file,swift,ceph,influxdb}: {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+    py{27,34}-mysql-{file,swift,ceph,influxdb}: {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+
+setenv =
+    py{27,34}-{postgresql,mysql}-file: GNOCCHI_TEST_STORAGE_DRIVER=file
+    py{27,34}-{postgresql,mysql}-swift: GNOCCHI_TEST_STORAGE_DRIVER=swift
+    py{27,34}-{postgresql,mysql}-ceph: GNOCCHI_TEST_STORAGE_DRIVER=ceph
+    py{27,34}-{postgresql,mysql}-influxdb: GNOCCHI_TEST_STORAGE_DRIVER=influxdb
 
 [testenv:bashate]
 deps = bashate
@@ -27,86 +36,6 @@ commands =
 
 [testenv:py34]
 commands = {toxinidir}/run-tests.sh "postgresql mysql" "file swift ceph" {posargs}
-
-[testenv:py27-postgresql-file]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
-basepython = python2.7
-commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py27-mysql-file]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
-basepython = python2.7
-commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py34-postgresql-file]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
-basepython = python3.4
-commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py27-postgresql-swift]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=swift
-basepython = python2.7
-commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py27-mysql-swift]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=swift
-basepython = python2.7
-commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py34-postgresql-swift]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=swift
-basepython = python3.4
-commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py27-postgresql-ceph]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=ceph
-basepython = python2.7
-commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py27-mysql-ceph]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=ceph
-basepython = python2.7
-commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py34-postgresql-ceph]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=ceph
-basepython = python3.4
-commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py34-mysql-file]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
-basepython = python3.4
-commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py34-mysql-swift]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=swift
-basepython = python3.4
-commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py34-mysql-ceph]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=ceph
-basepython = python3.4
-commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py27-postgresql-influxdb]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=influxdb
-basepython = python2.7
-commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py27-mysql-influxdb]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=influxdb
-basepython = python2.7
-commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py34-postgresql-influxdb]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=influxdb
-basepython = python3.4
-commands = {toxinidir}/setup-postgresql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-
-[testenv:py34-mysql-influxdb]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=influxdb
-basepython = python3.4
-commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 [testenv:py27-gate]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
