tox: factor default py{27,34} target
doc8 has been fixed for Python 3

Change-Id: I0a4842c7389efe329255dfa6fd22a2fe6d633fcd

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,9 @@ deps = -r{toxinidir}/requirements.txt
 commands =
     py{27,34}-postgresql-{file,swift,ceph,influxdb}: {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
     py{27,34}-mysql-{file,swift,ceph,influxdb}: {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+    py{27,34}: doc8 --ignore-path doc/source/rest.rst doc/source
+    py{27,34}: {toxinidir}/run-tests.sh "postgresql mysql" "file swift ceph" {posargs}
+    py{27,34}: {toxinidir}/generate-config-file.sh
 
 setenv =
     py{27,34}-{postgresql,mysql}-file: GNOCCHI_TEST_STORAGE_DRIVER=file
@@ -26,16 +29,6 @@ whitelist_externals = bash
 [testenv:pep8]
 deps = hacking>=0.10,<0.11
 commands = flake8
-
-[testenv:py27]
-# NOTE(jd): doc8 does not work with Python 3
-commands =
-  doc8 --ignore-path doc/source/rest.rst doc/source
-  {toxinidir}/run-tests.sh "postgresql mysql" "file swift ceph" {posargs}
-  {toxinidir}/generate-config-file.sh
-
-[testenv:py34]
-commands = {toxinidir}/run-tests.sh "postgresql mysql" "file swift ceph" {posargs}
 
 [testenv:py27-gate]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
