tox: Allow to pass some OS_* variables
New tox version need to list environment variables that are
safe for tests.

This change allows usefull oslotest environment variables:
OS_TEST_TIMEOUT, OS_STDOUT_CAPTURE, OS_STDERR_CAPTURE, OS_LOG_CAPTURE

Change-Id: I1d8d641b4f50e02beac82a785da82aaeb7d2e6ff

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py{27,34},py{27,34}-{postgresql,mysql}-{file,swift,ceph,influxdb},pep8
 [testenv]
 usedevelop = True
 sitepackages = False
-passenv = LANG
+passenv = LANG OS_TEST_TIMEOUT OS_STDOUT_CAPTURE OS_STDERR_CAPTURE OS_LOG_CAPTURE
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
@@ -33,7 +33,7 @@ commands = flake8
 [testenv:py27-gate]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
          GABBI_LIVE_FAIL_IF_NO_TEST=1
-passenv = LANG GNOCCHI_SERVICE*
+passenv = {[testenv]passenv} GNOCCHI_SERVICE*
 sitepackages = True
 basepython = python2.7
 commands = {toxinidir}/tools/pretty_tox.sh '{posargs}'
