--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,10 @@ passenv = LANG OS_TEST_TIMEOUT OS_STDOUT_CAPTURE OS_STDERR_CAPTURE OS_LOG_CAPTUR
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
-    py{27,34}-postgresql-{file,swift,ceph,influxdb}: {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-    py{27,34}-mysql-{file,swift,ceph,influxdb}: {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+    py{27,34}-postgresql-{file,swift,ceph}: {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+    py{27,34}-mysql-{file,swift,ceph}: {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+    py{27,34}-postgresql-influxdb: {toxinidir}/setup-postgresql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+    py{27,34}-mysql-influxdb: {toxinidir}/setup-mysql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
     py{27,34}: doc8 --ignore-path doc/source/rest.rst doc/source
     py{27,34}: {toxinidir}/run-tests.sh "postgresql mysql" "file swift ceph" {posargs}
     py{27,34}: {toxinidir}/generate-config-file.sh
