--- a/tox.ini
+++ b/tox.ini
@@ -5,23 +5,23 @@ envlist = py{27,34},py{27,34}-{postgresql,mysql}-{file,swift,ceph,influxdb},pep8
 [testenv]
 usedevelop = True
 sitepackages = False
-passenv = LANG OS_TEST_TIMEOUT OS_STDOUT_CAPTURE OS_STDERR_CAPTURE OS_LOG_CAPTURE
+passenv = LANG OS_TEST_TIMEOUT OS_STDOUT_CAPTURE OS_STDERR_CAPTURE OS_LOG_CAPTURE GNOCCHI_TEST_*
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands =
-    py{27,34}-postgresql-{file,swift,ceph}: {toxinidir}/setup-postgresql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-    py{27,34}-mysql-{file,swift,ceph}: {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-    py{27,34}-postgresql-influxdb: {toxinidir}/setup-postgresql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-    py{27,34}-mysql-influxdb: {toxinidir}/setup-mysql-tests.sh {toxinidir}/setup-influxdb-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
-    py{27,34}: doc8 --ignore-path doc/source/rest.rst doc/source
-    py{27,34}: {toxinidir}/run-tests.sh "postgresql mysql" "file swift ceph" {posargs}
-    py{27,34}: {toxinidir}/generate-config-file.sh
-
 setenv =
-    py{27,34}-{postgresql,mysql}-file: GNOCCHI_TEST_STORAGE_DRIVER=file
-    py{27,34}-{postgresql,mysql}-swift: GNOCCHI_TEST_STORAGE_DRIVER=swift
-    py{27,34}-{postgresql,mysql}-ceph: GNOCCHI_TEST_STORAGE_DRIVER=ceph
-    py{27,34}-{postgresql,mysql}-influxdb: GNOCCHI_TEST_STORAGE_DRIVER=influxdb
+    GNOCCHI_TEST_STORAGE_DRIVERS=file swift ceph
+    GNOCCHI_TEST_INDEXER_DRIVERS=postgresql mysql
+    py{27,34}-{postgresql,mysql}-file: GNOCCHI_TEST_STORAGE_DRIVERS=file
+    py{27,34}-{postgresql,mysql}-swift: GNOCCHI_TEST_STORAGE_DRIVERS=swift
+    py{27,34}-{postgresql,mysql}-ceph: GNOCCHI_TEST_STORAGE_DRIVERS=ceph
+    py{27,34}-{postgresql,mysql}-influxdb: GNOCCHI_TEST_STORAGE_DRIVERS=influxdb
+    py{27,34}-postgresql-{file,swift,ceph,influxdb}: GNOCCHI_TEST_INDEXER_DRIVERS=postgresql
+    py{27,34}-mysql-{file,swift,ceph,influxdb}: GNOCCHI_TEST_INDEXER_DRIVERS=mysql
+
+commands =
+    doc8 --ignore-path doc/source/rest.rst doc/source
+    {toxinidir}/generate-config-file.sh
+    {toxinidir}/run-tests.sh {posargs}
 
 [testenv:bashate]
 deps = bashate
