Use lighter validation to post measurements
Voluptuous is powerful, but a bit slow to perform
the transformation.

During the POST of 5000 measurements, half of the processing time
is the Voluptuous validation.

This change moves the validation for measurements to
a lighter version, that doesn't use Voluptuous.

Change-Id: I6e58fae232d6d2f3050ff248e62495a548d87033

--- a/gnocchi/tests/gabbi/gabbits/metric.yaml
+++ b/gnocchi/tests/gabbi/gabbits/metric.yaml
@@ -135,6 +135,48 @@ tests:
             value: 12
       status: 202
 
+    - name: create valid metric two
+      url: /v1/metric
+      method: POST
+      request_headers:
+          content-type: application/json
+      data:
+          archive_policy_name: cookies
+      status: 201
+      response_json_paths:
+          $.archive_policy_name: cookies
+
+    - name: push invalid measurements to metric
+      url: /v1/metric/$RESPONSE['$.id']/measures
+      request_headers:
+           content-type: application/json
+      method: post
+      data:
+          - timestamp: "2015-03-06T14:33:57"
+            value: 12
+          - timestamp: "2015-03-06T14:34:12"
+            value: "foobar"
+      status: 400
+
+    - name: create valid metric three
+      url: /v1/metric
+      method: POST
+      request_headers:
+          content-type: application/json
+      data:
+          archive_policy_name: cookies
+      status: 201
+      response_json_paths:
+          $.archive_policy_name: cookies
+
+    - name: push invalid measurements to metric bis
+      url: /v1/metric/$RESPONSE['$.id']/measures
+      request_headers:
+           content-type: application/json
+      method: post
+      data: 1
+      status: 400
+
     - name: add measure unknown metric
       url: /v1/metric/fake/measures
       request_headers:
