--- a/requirements.txt
+++ b/requirements.txt
@@ -29,8 +29,6 @@ WebOb>=1.4.1
 alembic>=0.7.6,!=0.8.1
 psycopg2
 pymysql
-# TODO(sileht): We currently require it to setup correclty
-# oslo config object, but once 2.2 will be released,
-# we can moved back this to test-requirements.txt
-keystonemiddleware>=1.5.0
+keystonemiddleware>=2.3.0
+PasteDeploy
 sphinx_bootstrap_theme
