Depend on oslo.middleware, add CORS default conf
Change-Id: Ia02ea19dc03aa95cb84cb98bce9b25612cd4e611

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ oslo.log>=1.0.0
 oslo.policy>=0.3.0
 oslo.serialization>=1.4.0
 oslo.utils>=1.6.0
+oslo.middleware
 oslosphinx>=2.2.0  # Apache-2.0
 pandas
 pecan>=0.9
