archive_policy: disallow to have identical granularities
This disallows having several identical granularities in an archive policy.
This makes sure that when you pick an granularity requested by the user we
can't pick the "wrong" archive, e.g. the longer or shorter one for example.

Change-Id: I937f464d09514741f7ede505b8d7c507ce466c2d

--- a/gnocchi/tests/gabbi/gabbits/archive.yaml
+++ b/gnocchi/tests/gabbi/gabbits/archive.yaml
@@ -359,6 +359,23 @@ tests:
       response_strings:
           - timespan ≠ granularity × points
 
+    - name: create identical granularities policy
+      url: /v1/archive_policy
+      method: POST
+      request_headers:
+          content-type: application/json
+          x-roles: admin
+      data:
+          name: complex
+          definition:
+              - granularity: 1 second
+                points: 60
+              - granularity: 1 second
+                points: 120
+      status: 400
+      response_strings:
+          - "More than one archive policy uses granularity `1.0'"
+
     - name: policy invalid unit
       url: /v1/archive_policy
       method: POST
