Use config file for oslo-config-generator instead of generate-config-file.sh
We don't need a separate script to wrap the oslo-config-generator. Like
other projects, we can just specify a config-generator config file to
define the namespaces.

Change-Id: I731310deb7f0256790d67e9c18adbfafad824010

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ setenv =
 
 commands =
     doc8 --ignore-path doc/source/rest.rst doc/source
-    {toxinidir}/generate-config-file.sh
+    oslo-config-generator --config-file=etc/gnocchi/gnocchi-config-generator.conf
     {toxinidir}/run-tests.sh {posargs}
 
 [testenv:bashate]
@@ -58,7 +58,7 @@ exclude = .tox,doc,gnocchi/indexer/alembic/versions/1c98ac614015_initial_base.py
 show-source = true
 
 [testenv:genconfig]
-commands = {toxinidir}/generate-config-file.sh
+commands = oslo-config-generator --config-file=etc/gnocchi/gnocchi-config-generator.conf
 
 [testenv:docs]
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
