--- a/gnocchi/tests/gabbi/gabbits/archive.yaml
+++ b/gnocchi/tests/gabbi/gabbits/archive.yaml
@@ -359,6 +359,36 @@ tests:
       response_strings:
           - timespan ≠ granularity × points
 
+    - name: create invalid points policy
+      url: /v1/archive_policy
+      method: POST
+      request_headers:
+          content-type: application/json
+          x-roles: admin
+      data:
+          name: complex
+          definition:
+              - granularity: 0
+                points: 60
+      status: 400
+      response_strings:
+          - "Invalid input: not a valid value for dictionary value"
+
+    - name: create invalid granularity policy
+      url: /v1/archive_policy
+      method: POST
+      request_headers:
+          content-type: application/json
+          x-roles: admin
+      data:
+          name: complex
+          definition:
+              - granularity: 10
+                points: 0
+      status: 400
+      response_strings:
+          - "Invalid input: not a valid value for dictionary value"
+
     - name: create identical granularities policy
       url: /v1/archive_policy
       method: POST
