Fix minimum Pandas required version
We need pandas 0.17.0 to use sort_values()

Change-Id: I47bcbce4a725ff669eaed01350aa611928918ebd

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ oslo.policy>=0.3.0
 oslo.serialization>=1.4.0
 oslo.utils>=1.6.0
 oslosphinx>=2.2.0  # Apache-2.0
-pandas
+pandas>=0.17.0
 pecan>=0.9
 python-swiftclient
 pytimeparse>=1.1.5
