Make swift timeout configurable
Change-Id: I512b01c82310d923537015abef2f6ac1cfd45569
Closes-Bug: #1512329
(cherry picked from commit e0b317787cf08ea072efba857488fd13be66ef68)

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ oslo.middleware
 oslosphinx>=2.2.0  # Apache-2.0
 pandas>=0.17.0
 pecan>=0.9
-python-swiftclient
+python-swiftclient>=2.5.0
 pytimeparse>=1.1.5
 futures
 requests
