--- a/setup.cfg
+++ b/setup.cfg
@@ -74,7 +74,7 @@ gnocchi.aggregates =
 
 console_scripts =
     gnocchi-api = gnocchi.cli:api
-    gnocchi-dbsync = gnocchi.cli:storage_dbsync
+    gnocchi-upgrade = gnocchi.cli:upgrade
     gnocchi-statsd = gnocchi.cli:statsd
     gnocchi-metricd = gnocchi.cli:metricd
     carbonara-create = gnocchi.carbonara:create_archive_file
