Split requirements in smaller part
This allows to only install the module that are needed for a deployment
scenario.

Change-Id: I8ec514aa69f5a6b3cc75fd978e7422f8f59e6577

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,53 @@ classifier =
     Programming Language :: Python :: 3.4
     Topic :: System :: Monitoring
 
+[extras]
+mysql =
+    pymysql
+    oslo.db>=1.8.0
+    sqlalchemy
+    sqlalchemy-utils
+    alembic>=0.7.6,!=0.8.1
+postgresql =
+    psycopg2
+    oslo.db>=1.8.0
+    sqlalchemy
+    sqlalchemy-utils
+    alembic>=0.7.6,!=0.8.1
+influxdb =
+    influxdb>=2.4
+swift =
+    python-swiftclient>=2.5.0
+    msgpack-python
+    tooz>=0.11
+ceph =
+    msgpack-python
+    tooz>=0.11
+file =
+    msgpack-python
+    tooz>=0.11
+doc =
+    oslosphinx>=2.2.0
+    sphinx
+    sphinxcontrib-httpdomain
+    PyYAML
+    Jinja2
+test =
+    gabbi>=0.101.2
+    coverage>=3.6
+    fixtures
+    mock
+    oslotest
+    python-subunit>=0.0.18
+    tempest-lib>=0.2.0
+    testrepository
+    testscenarios
+    testtools>=0.9.38
+    WebTest>=2.0.16
+    doc8
+    sysv_ipc
+    tooz>=0.11
+
 [global]
 setup-hooks =
     pbr.hooks.setup_hook
