Limit version of keystonemiddleware to before 4
Major version 4 fixed the way options were handled, but broke our code.
We could probably fix into Gnocchi, but it's simpler to just limit
people to an old Keystonemiddleware. Future version of Gnocchi won't
depend on it anyway.

Change-Id: Ie657c9dd874bed61118fec1b28abd4a6fa05c010

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ WebOb>=1.4.1
 alembic>=0.7.6,!=0.8.1
 psycopg2
 pymysql
-keystonemiddleware>=2.3.0
+keystonemiddleware>=2.3.0,<4
 PasteDeploy
 sphinx_bootstrap_theme
 prettytable
