--- a/tox.ini
+++ b/tox.ini
@@ -54,7 +54,7 @@ setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
 commands = {toxinidir}/setup-postgresql-tests.sh {posargs}
 
 [flake8]
-exclude = .tox,doc,gnocchi/indexer/alembic/versions/1c98ac614015_initial_base.py
+exclude = .tox,.eggs,doc,gnocchi/indexer/alembic/versions/1c98ac614015_initial_base.py
 show-source = true
 
 [testenv:genconfig]
