tox: create a target for each indexer
Change-Id: Ifaab92b607cf5280a9b8556b6f9764c5b8533c01
(cherry picked from commit 6cab508acd71ca09e756d251add2adc2639cd924)

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 1.8
-envlist = py{27,34},py{27,34}-{postgresql,mysql}-{file,swift,ceph,influxdb},pep8,bashate
+envlist = py{27,34},py{27,34}-{postgresql,mysql}{,-file,-swift,-ceph,-influxdb},pep8,bashate
 
 [testenv]
 usedevelop = True
@@ -11,6 +11,8 @@ deps = -r{toxinidir}/requirements.txt
 setenv =
     GNOCCHI_TEST_STORAGE_DRIVERS=file swift ceph
     GNOCCHI_TEST_INDEXER_DRIVERS=postgresql mysql
+    py{27,34}-postgresql: GNOCCHI_TEST_INDEXER_DRIVERS=postgresql
+    py{27,34}-mysql: GNOCCHI_TEST_INDEXER_DRIVERS=mysql
     py{27,34}-{postgresql,mysql}-file: GNOCCHI_TEST_STORAGE_DRIVERS=file
     py{27,34}-{postgresql,mysql}-swift: GNOCCHI_TEST_STORAGE_DRIVERS=swift
     py{27,34}-{postgresql,mysql}-ceph: GNOCCHI_TEST_STORAGE_DRIVERS=ceph
