--- a/tox.ini
+++ b/tox.ini
@@ -71,6 +71,6 @@ commands = doc8 --ignore-path doc/source/rest.rst doc/source
 
 [testenv:docs-gnocchi.xyz]
 deps = .[file,postgresql,test,doc]
-       sphinx_bootstrap_theme
+       sphinx_rtd_theme
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
-commands = {toxinidir}/setup-postgresql-tests.sh sphinx-build -D html_theme=bootstrap doc/source doc/build
+commands = {toxinidir}/setup-postgresql-tests.sh sphinx-build -D html_theme=sphinx_rtd_theme doc/source doc/build
