Do not enable Keystone by default
Closes-Bug: #1520272

Change-Id: I4abf404e987a305368575d64bca93869ce344fcb

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,8 @@ classifier =
     Topic :: System :: Monitoring
 
 [extras]
+keystone =
+    keystonemiddleware>=4.0.0
 mysql =
     pymysql
     oslo.db>=1.8.0
@@ -64,6 +66,7 @@ test =
     doc8
     sysv_ipc
     tooz>=0.11
+    keystonemiddleware>=4.0.0
 
 [global]
 setup-hooks =
