Make gnocchi.xyz doc output in a sane directory
Change-Id: Ida373e763c4e5d1e77ea6e3209e60bf503dd096d

--- a/tox.ini
+++ b/tox.ini
@@ -73,4 +73,4 @@ commands = doc8 --ignore-path doc/source/rest.rst doc/source
 deps = .[file,postgresql,test,doc]
        sphinx_rtd_theme
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
-commands = {toxinidir}/setup-postgresql-tests.sh sphinx-build -D html_theme=sphinx_rtd_theme doc/source doc/build
+commands = {toxinidir}/setup-postgresql-tests.sh sphinx-build -D html_theme=sphinx_rtd_theme doc/source doc/build/html
