rest: fix revision creation
Currently, there's a still an edge case if a user change both metrics and
something else in a PATCH request: no resource will be created at all because
'metrics' is found.

This fixes that.

Change-Id: Ic17a798ecba4892a07517a08bde4b2d96a1f3967
Related-Bug: #1520324

--- a/gnocchi/tests/gabbi/gabbits/history.yaml
+++ b/gnocchi/tests/gabbi/gabbits/history.yaml
@@ -67,6 +67,9 @@ tests:
           content-type: application/json
       data:
           project_id: fe20a931-1012-4cc6-addc-39556ec60907
+          metrics:
+            mymetric:
+              archive_policy_name: low
       status: 200
       response_json_paths:
           user_id: f53c58a4-fdea-4c09-aac4-02135900be67
