--- a/tox.ini
+++ b/tox.ini
@@ -6,18 +6,21 @@ envlist = py{27,34},py{27,34}-{postgresql,mysql}{,-file,-swift,-ceph,-influxdb},
 usedevelop = True
 sitepackages = False
 passenv = LANG OS_TEST_TIMEOUT OS_STDOUT_CAPTURE OS_STDERR_CAPTURE OS_LOG_CAPTURE GNOCCHI_TEST_*
-deps = .[mysql,postgresql,test,file,influxdb,ceph,swift]
+deps = .[test]
+   py{27,34}-postgresql: .[postgresql,swift,ceph,file]
+   py{27,34}-mysql: .[mysql,swift,ceph,file]
+   py{27,34}-{postgresql,mysql}-influxdb: .[influxdb]
 setenv =
+    GNOCCHI_TEST_STORAGE_DRIVER=file
+    GNOCCHI_TEST_INDEXER_DRIVER=postgresql
     GNOCCHI_TEST_STORAGE_DRIVERS=file swift ceph
     GNOCCHI_TEST_INDEXER_DRIVERS=postgresql mysql
-    py{27,34}-postgresql: GNOCCHI_TEST_INDEXER_DRIVERS=postgresql
-    py{27,34}-mysql: GNOCCHI_TEST_INDEXER_DRIVERS=mysql
     py{27,34}-{postgresql,mysql}-file: GNOCCHI_TEST_STORAGE_DRIVERS=file
     py{27,34}-{postgresql,mysql}-swift: GNOCCHI_TEST_STORAGE_DRIVERS=swift
     py{27,34}-{postgresql,mysql}-ceph: GNOCCHI_TEST_STORAGE_DRIVERS=ceph
     py{27,34}-{postgresql,mysql}-influxdb: GNOCCHI_TEST_STORAGE_DRIVERS=influxdb
-    py{27,34}-postgresql-{file,swift,ceph,influxdb}: GNOCCHI_TEST_INDEXER_DRIVERS=postgresql
-    py{27,34}-mysql-{file,swift,ceph,influxdb}: GNOCCHI_TEST_INDEXER_DRIVERS=mysql
+    py{27,34}-postgresql{,-file,-swift,-ceph,-influxdb}: GNOCCHI_TEST_INDEXER_DRIVERS=postgresql
+    py{27,34}-mysql{,-file,-swift,-ceph,-influxdb}: GNOCCHI_TEST_INDEXER_DRIVERS=mysql
 
 commands =
     doc8 --ignore-path doc/source/rest.rst doc/source
@@ -45,32 +48,35 @@ commands = {toxinidir}/tools/pretty_tox.sh '{posargs}'
 [testenv:py27-gabbi]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
 basepython = python2.7
-commands = {toxinidir}/setup-mysql-tests.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
+commands = {toxinidir}/setup-test-env.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 [testenv:py27-cover]
-commands = {toxinidir}/setup-mysql-tests.sh python setup.py testr --coverage --testr-args="{posargs}"
+commands = {toxinidir}/setup-test-env.sh python setup.py testr --coverage --testr-args="{posargs}"
 
 [testenv:venv]
 # This is used by the doc job on the gate
-deps = .[file,postgresql,test,doc]
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
-commands = {toxinidir}/setup-postgresql-tests.sh {posargs}
+deps = {[testenv:docs]deps}
+commands = {toxinidir}/setup-test-env.sh {posargs}
 
 [flake8]
 exclude = .tox,.eggs,doc,gnocchi/indexer/alembic/versions/1c98ac614015_initial_base.py
 show-source = true
 
 [testenv:genconfig]
+deps = .[mysql,postgresql,test,file,influxdb,ceph,swift]
 commands = oslo-config-generator --config-file=etc/gnocchi/gnocchi-config-generator.conf
 
 [testenv:docs]
-deps = .[file,postgresql,test,doc]
+# This does not work, see: https://bitbucket.org/hpk42/tox/issues/302
+# deps = {[testenv]deps}
+#        .[doc]
+deps = .[test,postgresql,file,doc]
 setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
+         GNOCCHI_TEST_INDEXER_DRIVER=postgresql
 commands = doc8 --ignore-path doc/source/rest.rst doc/source
-           {toxinidir}/setup-postgresql-tests.sh python setup.py build_sphinx
+           {toxinidir}/setup-test-env.sh python setup.py build_sphinx
 
 [testenv:docs-gnocchi.xyz]
 deps = .[file,postgresql,test,doc]
        sphinx_rtd_theme
-setenv = GNOCCHI_TEST_STORAGE_DRIVER=file
-commands = {toxinidir}/setup-postgresql-tests.sh sphinx-build -D html_theme=sphinx_rtd_theme doc/source doc/build/html
+commands = {toxinidir}/setup-test-env.sh sphinx-build -D html_theme=sphinx_rtd_theme doc/source doc/build/html
