tests: read config file if GABBI_LIVE is set
When making the tests not read the default configuration files, we
actually broke the gating on Gabbi live tests. These tests need to read
the configuration file that is set up by devstack in the gate, since it
contains the configuration for the storage and indexer.

Change-Id: I81e6c19c26b0eb07e34ed5ad9400b115b140709d

--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ commands = flake8
 
 [testenv:py27-gate]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
-         GABBI_LIVE_FAIL_IF_NO_TEST=1
+         GABBI_LIVE=1
 passenv = {[testenv]passenv} GNOCCHI_SERVICE*
 sitepackages = True
 basepython = python2.7
