rest: fix timestamp parsing for aggregates
Currently, start/stop are not parsed as Timestamp like in the rest of
the measures retrieve requests. This patches fixes that.

Change-Id: If7ac90f9a01cffa4a09c2a9e267afe8be4dfe2c5
Closes-Bug: #1523549

--- a/gnocchi/tests/gabbi/gabbits/aggregation.yaml
+++ b/gnocchi/tests/gabbi/gabbits/aggregation.yaml
@@ -83,3 +83,16 @@ tests:
         $:
           - ['2015-03-06T14:33:57+00:00', 1.0, 23.1]
           - ['2015-03-06T14:34:12+00:00', 1.0, 7.0]
+
+    - name: get metric list to push metric 3
+      url: /v1/metric
+
+    - name: get measure aggregates by granularity with timestamps
+      url: /v1/aggregation/metric?metric=$RESPONSE['$[0].id']&metric=$RESPONSE['$[1].id']&start=2015-03-06T15:33:57%2B01:00&stop=2015-03-06T15:34:00%2B01:00
+      poll:
+          count: 10
+          delay: 1
+      response_json_paths:
+        $:
+          - ['2015-03-06T14:30:00+00:00', 300.0, 15.05]
+          - ['2015-03-06T14:33:57+00:00', 1.0, 23.1]
