Remove custom api-paste.ini for testing
This change removes the custom api-paste config for testing.
It makes all tests pass throught paste.deploy instead of
the custom app loader in tests.

It also homogenises the configuration names
in rest/app.py for conf, cfg and pecan_config.

Change-Id: I13ba22cd9807ebedcc90db22b1c0eb9389aa59c2

--- a/etc/gnocchi/api-paste.ini
+++ b/etc/gnocchi/api-paste.ini
@@ -1,9 +1,13 @@
-# Add keystone_authtoken in the pipeline if you want to use keystone authentication
+# Use gnocchi+auth in the pipeline if you want to use keystone authentication
 [pipeline:main]
 pipeline = gnocchi
 
+[pipeline:gnocchi+auth]
+pipeline = keystone_authtoken gnocchi
+
 [app:gnocchi]
 paste.app_factory = gnocchi.rest.app:app_factory
+root = gnocchi.rest.RootController
 
 [filter:keystone_authtoken]
 paste.filter_factory = keystonemiddleware.auth_token:filter_factory
