Bypass the auth when listing Gnocchi versions
Change-Id: Ied303615d53ac8283ac815e84a90857d39edfcbf
Closes-bug: #1522674

--- a/etc/gnocchi/api-paste.ini
+++ b/etc/gnocchi/api-paste.ini
@@ -1,13 +1,27 @@
 # Use gnocchi+auth in the pipeline if you want to use keystone authentication
 [pipeline:main]
-pipeline = gnocchi
+pipeline = gnocchi+noauth
 
-[pipeline:gnocchi+auth]
-pipeline = keystone_authtoken gnocchi
+[composite:gnocchi+noauth]
+use = egg:Paste#urlmap
+/ = gnocchiversions
+/v1 = gnocchiv1
 
-[app:gnocchi]
+[composite:gnocchi+auth]
+use = egg:Paste#urlmap
+/ = gnocchiversions
+/v1 = gnocchiv1+auth
+
+[pipeline:gnocchiv1+auth]
+pipeline = keystone_authtoken gnocchiv1
+
+[app:gnocchiversions]
 paste.app_factory = gnocchi.rest.app:app_factory
-root = gnocchi.rest.RootController
+root = gnocchi.rest.VersionsController
+
+[app:gnocchiv1]
+paste.app_factory = gnocchi.rest.app:app_factory
+root = gnocchi.rest.V1Controller
 
 [filter:keystone_authtoken]
 paste.filter_factory = keystonemiddleware.auth_token:filter_factory
