Handle all resources type with one controller
Instead of having controller for each resource type.
This moves to a model when we have one controller that handle
all types.

Partial implements: blueprint resource-type-rest-api
Change-Id: I53826cc1b35f0f844d1a3d157a4fecc454fe4aa4

--- a/setup.cfg
+++ b/setup.cfg
@@ -92,19 +92,19 @@ gnocchi.indexer.resources =
     stack = gnocchi.indexer.sqlalchemy_base:ResourceExt
     image = gnocchi.indexer.sqlalchemy_extension:Image
 
-gnocchi.controller.resources =
-    generic = gnocchi.rest:GenericResourcesController
-    instance = gnocchi.rest:InstancesResourcesController
-    instance_disk = gnocchi.rest:InstanceDisksResourcesController
-    instance_network_interface = gnocchi.rest:InstanceNetworkInterfacesResourcesController
-    swift_account = gnocchi.rest:SwiftAccountsResourcesController
-    volume = gnocchi.rest:VolumesResourcesController
-    ceph_account = gnocchi.rest:CephAccountsResourcesController
-    network = gnocchi.rest:NetworkResourcesController
-    identity = gnocchi.rest:IdentityResourcesController
-    ipmi = gnocchi.rest:IPMIResourcesController
-    stack = gnocchi.rest:StackResourcesController
-    image = gnocchi.rest:ImageResourcesController
+gnocchi.controller.schemas =
+    generic = gnocchi.rest:GenericSchema
+    instance = gnocchi.rest:InstanceSchema
+    instance_disk = gnocchi.rest:InstanceDiskSchema
+    instance_network_interface = gnocchi.rest:InstanceNetworkInterfaceSchema
+    swift_account = gnocchi.rest:GenericSchema
+    volume = gnocchi.rest:VolumeSchema
+    ceph_account = gnocchi.rest:GenericSchema
+    network = gnocchi.rest:GenericSchema
+    identity = gnocchi.rest:GenericSchema
+    ipmi = gnocchi.rest:GenericSchema
+    stack = gnocchi.rest:GenericSchema
+    image = gnocchi.rest:ImageSchema
 
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
