Generate configuration file in sdist
When building source tarball, generate the configuration file to include
it in the sources.

Change-Id: I81f4669bdf6a4fe51c247b129a1e69c13a657131

--- a/setup.cfg
+++ b/setup.cfg
@@ -73,9 +73,14 @@ test =
 setup-hooks =
     pbr.hooks.setup_hook
 
+[sdist]
+pre-hook.build_config = gnocchi.genconfig.sdist_prehook
+
 [files]
 packages =
     gnocchi
+data_files =
+    etc/gnocchi = etc/gnocchi/*
 
 [entry_points]
 gnocchi.indexer.resources =
