tox: fix py27-gabbi dependencies
It uses PostgreSQL and file by default, let's install the deps for that.

Change-Id: I0f4e6ebb210d7a5cef22c0bd9c3d7302b2db1cb7

--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,7 @@ commands = {toxinidir}/tools/pretty_tox.sh '{posargs}'
 
 # This target provides a shortcut to running just the gabbi tests.
 [testenv:py27-gabbi]
+deps = .[test,postgresql,file]
 setenv = OS_TEST_PATH=gnocchi/tests/gabbi
 basepython = python2.7
 commands = {toxinidir}/setup-test-env.sh {toxinidir}/tools/pretty_tox.sh '{posargs}'
