--- a/setup.cfg
+++ b/setup.cfg
@@ -73,8 +73,8 @@ test =
 setup-hooks =
     pbr.hooks.setup_hook
 
-[sdist]
-pre-hook.build_config = gnocchi.genconfig.sdist_prehook
+[build_py]
+pre-hook.build_config = gnocchi.genconfig.prehook
 
 [files]
 packages =
